# f1-purple-line

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  human-user-notes.txt  project-notes.txt
crates/f1-app/: Cargo.toml
crates/f1-app/src/: components.rs  main.rs  resources.rs
crates/f1-app/src/plugins/: camera.rs  mod.rs  replay.rs  ui.rs
crates/f1-app/src/systems/: input.rs  mod.rs  rendering.rs
crates/f1-data/: Cargo.toml
crates/f1-data/src/: analysis.rs  lib.rs  loader.rs  turn.rs  types.rs
docs/: BUG_REPORT_JSON_LOADING.md  DEV_LOG.md  PROJECT.md
tools/: fetch_session.py  pyproject.toml
