[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/f1-purple-line"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Bevy engine
bevy = "0.15"

# Math/geometry
glam = "0.29"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
f1-data = { path = "crates/f1-data" }
